--- a/Python first steps, day 4 -- 2022-12Dec-12.ipynb
+++ b/Python first steps, day 4 -- 2022-12Dec-12.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d4dc26fe",
+   "id": "6e97beba",
    "metadata": {},
    "source": [
     "# Agenda, day 4: Functions!\n",
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6fa7cb3e",
+   "id": "77f152b8",
    "metadata": {},
    "source": [
     "# What are functions?\n",
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7eabb06e",
+   "id": "79b0de9f",
    "metadata": {},
    "source": [
     "# To define a new function:\n",
@@ -87,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "6a402998",
+   "id": "95736903",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d90db5a6",
+   "id": "9fe5a027",
    "metadata": {},
    "source": [
     "# What happens when I define a function?\n",
@@ -115,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "e0e9fdc7",
+   "id": "43baac0a",
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "25b0bb0c",
+   "id": "6da0c797",
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "2a4493be",
+   "id": "b3c9af8c",
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "253724f8",
+   "id": "2c92b4fd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "7b257101",
+   "id": "64916817",
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "fca6c031",
+   "id": "ba5dde39",
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "396a3eef",
+   "id": "a7f5e4a6",
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dcf2b195",
+   "id": "e2bddba0",
    "metadata": {},
    "source": [
     "# Exercise: Calculator\n",
@@ -279,7 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "74112368",
+   "id": "30c24863",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "ef49491a",
+   "id": "b89ce603",
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "5e73c4f8",
+   "id": "0894a02e",
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5839adc9",
+   "id": "e9e209c7",
    "metadata": {},
    "source": [
     "# Arguments and parameters\n",
@@ -367,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "e39b60a5",
+   "id": "550ba390",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +380,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "1f91f956",
+   "id": "fed4d3cd",
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +401,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "588bab63",
+   "id": "070c3e41",
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +422,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "dce474ca",
+   "id": "b9f197a6",
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d0aa8693",
+   "id": "2b7b00ea",
    "metadata": {},
    "source": [
     "# Recap on simple parameters\n",
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f89faa9",
+   "id": "98c383b5",
    "metadata": {},
    "source": [
     "# Exercise: Rewrite `calc` to use parameters\n",
@@ -467,7 +467,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "3fde6b52",
+   "id": "d4d8c235",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -496,7 +496,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "680fca9f",
+   "id": "a3da0b50",
    "metadata": {},
    "outputs": [
     {
@@ -517,7 +517,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "d1b3293d",
+   "id": "6c73d400",
    "metadata": {},
    "outputs": [
     {
@@ -541,7 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "b4a85634",
+   "id": "b8de451a",
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8631e6f1",
+   "id": "bee35ee6",
    "metadata": {},
    "source": [
     "# Next up:\n",
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91163312",
+   "id": "37adbee4",
    "metadata": {},
    "source": [
     "# Return values\n",
@@ -602,7 +602,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "284b68db",
+   "id": "fd88d62a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -614,7 +614,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "28a11a1a",
+   "id": "8e07ce08",
    "metadata": {},
    "outputs": [
     {
@@ -640,7 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "b957ad04",
+   "id": "ae3786ab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -671,7 +671,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "54eed5ac",
+   "id": "88c22b14",
    "metadata": {},
    "outputs": [
     {
@@ -689,7 +689,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "829584e6",
+   "id": "50090dd7",
    "metadata": {},
    "source": [
     "# What might we return from a function?\n",
@@ -702,7 +702,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1f9bbe0",
+   "id": "8d96235d",
    "metadata": {},
    "source": [
     "# Exercise: Biggest and smallest\n",
@@ -722,7 +722,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "44f4f294",
+   "id": "174b06a4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -744,7 +744,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "4976d01b",
+   "id": "0bcc6196",
    "metadata": {},
    "outputs": [
     {
@@ -765,7 +765,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "64119681",
+   "id": "dddb815f",
    "metadata": {},
    "outputs": [
     {
@@ -787,7 +787,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "ac3aa38b",
+   "id": "9dfec6aa",
    "metadata": {},
    "outputs": [
     {
@@ -808,7 +808,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "2cdcfc97",
+   "id": "bf70b92b",
    "metadata": {},
    "outputs": [
     {
@@ -829,7 +829,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "edf6cd1e",
+   "id": "beec785d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -845,7 +845,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79af7e83",
+   "id": "dc792e16",
    "metadata": {},
    "source": [
     "# Types of arguments in Python\n",
@@ -861,7 +861,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "2deabe53",
+   "id": "3265c582",
    "metadata": {},
    "outputs": [
     {
@@ -886,7 +886,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "2e3a6c15",
+   "id": "5862a0b3",
    "metadata": {},
    "outputs": [
     {
@@ -907,7 +907,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "7d1a3815",
+   "id": "11985060",
    "metadata": {},
    "outputs": [
     {
@@ -925,7 +925,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3107ba7",
+   "id": "512d14f2",
    "metadata": {},
    "source": [
     "# Exercise: Name and age\n",
@@ -938,7 +938,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "155c4810",
+   "id": "d4e24c67",
    "metadata": {},
    "outputs": [
     {
@@ -967,7 +967,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "8a5746ec",
+   "id": "46194ac8",
    "metadata": {},
    "outputs": [
     {
@@ -988,7 +988,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "dc8ba410",
+   "id": "77d9bf79",
    "metadata": {},
    "outputs": [
     {
@@ -1009,7 +1009,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "d375a15c",
+   "id": "9792f512",
    "metadata": {},
    "outputs": [
     {
@@ -1029,7 +1029,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11313e4c",
+   "id": "d76fc80e",
    "metadata": {},
    "source": [
     "# Optional arguments\n",
@@ -1045,7 +1045,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "b864f169",
+   "id": "90d7e0ea",
    "metadata": {},
    "outputs": [
     {
@@ -1070,7 +1070,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "79f36c13",
+   "id": "671b81ac",
    "metadata": {},
    "outputs": [
     {
@@ -1096,7 +1096,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "959394d2",
+   "id": "5e40c8ea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1111,7 +1111,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "3964b043",
+   "id": "3e452d5f",
    "metadata": {},
    "outputs": [
     {
@@ -1132,7 +1132,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "197001dc",
+   "id": "a259c099",
    "metadata": {},
    "outputs": [
     {
@@ -1153,7 +1153,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "527652ef",
+   "id": "fe945e96",
    "metadata": {},
    "outputs": [
     {
@@ -1173,7 +1173,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "55a40179",
+   "id": "1c349f88",
    "metadata": {},
    "source": [
     "# Next up:\n",
@@ -1185,7 +1185,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "516e1146",
+   "id": "0044fdef",
    "metadata": {},
    "source": [
     "# f-strings (\"format strings\" or \"fancy strings\")\n",
@@ -1221,7 +1221,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "46a59b2c",
+   "id": "cdf7a575",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1232,7 +1232,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "98760a96",
+   "id": "67b61ff2",
    "metadata": {},
    "outputs": [
     {
@@ -1253,7 +1253,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "f8df3f19",
+   "id": "adc33b35",
    "metadata": {},
    "outputs": [
     {
@@ -1277,7 +1277,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "f52a8cde",
+   "id": "4e7516d0",
    "metadata": {},
    "outputs": [
     {
@@ -1300,7 +1300,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65afc419",
+   "id": "9daa4011",
    "metadata": {},
    "source": [
     "# Argument typing"
@@ -1309,7 +1309,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "49af1b17",
+   "id": "bba71266",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1321,7 +1321,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "a367fbf2",
+   "id": "0b346991",
    "metadata": {},
    "outputs": [
     {
@@ -1342,7 +1342,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "5e456130",
+   "id": "bbdfa1db",
    "metadata": {},
    "outputs": [
     {
@@ -1364,7 +1364,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "81394bc6",
+   "id": "6ad748b3",
    "metadata": {},
    "outputs": [
     {
@@ -1386,7 +1386,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "7f343c77",
+   "id": "9bf8a2e2",
    "metadata": {},
    "outputs": [
     {
@@ -1408,7 +1408,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "04f19424",
+   "id": "a9849fbf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1439,7 +1439,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "5bf608b1",
+   "id": "1af3f11d",
    "metadata": {},
    "outputs": [
     {
@@ -1460,7 +1460,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "2de3d7b6",
+   "id": "59bd1d88",
    "metadata": {},
    "outputs": [
     {
@@ -1485,7 +1485,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b550ec6",
+   "id": "a6963a18",
    "metadata": {},
    "source": [
     "# Exercise: Vowel count\n",
@@ -1500,7 +1500,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "399b45a3",
+   "id": "34390867",
    "metadata": {},
    "outputs": [
     {
@@ -1538,7 +1538,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98170905",
+   "id": "4cd503c3",
    "metadata": {},
    "source": [
     "# Complex return values\n",
@@ -1557,7 +1557,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73354806",
+   "id": "df314759",
    "metadata": {},
    "source": [
     "# Exercise: Filter vowels\n",
@@ -1575,7 +1575,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "5859e42f",
+   "id": "8b9dd71e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1595,7 +1595,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "2e585c5d",
+   "id": "c3eb1547",
    "metadata": {},
    "outputs": [
     {
@@ -1629,7 +1629,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "2f282bf6",
+   "id": "1008a6e0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1650,7 +1650,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "54c38147",
+   "id": "917fa32e",
    "metadata": {},
    "outputs": [
     {
@@ -1670,7 +1670,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a2f710d7",
+   "id": "c038ace2",
    "metadata": {},
    "source": [
     "# Tuple unpacking\n",
@@ -1688,7 +1688,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "487f477c",
+   "id": "2ba1a267",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1701,7 +1701,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "8fe068f3",
+   "id": "a03dbc98",
    "metadata": {},
    "outputs": [
     {
@@ -1722,7 +1722,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "673a87b5",
+   "id": "d0e54ffd",
    "metadata": {},
    "outputs": [
     {
@@ -1743,7 +1743,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "e7609847",
+   "id": "6f2b4d63",
    "metadata": {},
    "outputs": [
     {
@@ -1764,7 +1764,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "ac99615f",
+   "id": "5da3305f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1774,7 +1774,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "10ea69a9",
+   "id": "d00169af",
    "metadata": {},
    "outputs": [
     {
@@ -1795,7 +1795,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "f81b9507",
+   "id": "bd002294",
    "metadata": {},
    "outputs": [
     {
@@ -1814,9 +1814,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d223e4ec",
+   "metadata": {},
+   "source": [
+    "# Next up:\n",
+    "\n",
+    "- Local vs global \n",
+    "- Online interactive challenge"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b78a858",
+   "id": "0acb72ec",
    "metadata": {},
    "outputs": [],
    "source": []
