--- a/Python first steps, day 4 -- 2022-12Dec-12.ipynb
+++ b/Python first steps, day 4 -- 2022-12Dec-12.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6e97beba",
+   "id": "c5217f68",
    "metadata": {},
    "source": [
     "# Agenda, day 4: Functions!\n",
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77f152b8",
+   "id": "acdda343",
    "metadata": {},
    "source": [
     "# What are functions?\n",
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79b0de9f",
+   "id": "029d70b0",
    "metadata": {},
    "source": [
     "# To define a new function:\n",
@@ -87,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "95736903",
+   "id": "d8dcf0bc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9fe5a027",
+   "id": "66a70465",
    "metadata": {},
    "source": [
     "# What happens when I define a function?\n",
@@ -115,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "43baac0a",
+   "id": "f6f0bfc9",
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "6da0c797",
+   "id": "c8e985b8",
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "b3c9af8c",
+   "id": "856e58cf",
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "2c92b4fd",
+   "id": "4be1f642",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "64916817",
+   "id": "ad46771c",
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "ba5dde39",
+   "id": "909ff9b3",
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "a7f5e4a6",
+   "id": "a35b6a7c",
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e2bddba0",
+   "id": "31c7b2d2",
    "metadata": {},
    "source": [
     "# Exercise: Calculator\n",
@@ -279,7 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "30c24863",
+   "id": "fbcfc54d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "b89ce603",
+   "id": "3fc23b89",
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "0894a02e",
+   "id": "a2a4dc4d",
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9e209c7",
+   "id": "b50f6409",
    "metadata": {},
    "source": [
     "# Arguments and parameters\n",
@@ -367,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "550ba390",
+   "id": "9756b3b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +380,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "fed4d3cd",
+   "id": "ea874964",
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +401,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "070c3e41",
+   "id": "2d8da5ed",
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +422,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "b9f197a6",
+   "id": "3523f02b",
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b7b00ea",
+   "id": "eef94d52",
    "metadata": {},
    "source": [
     "# Recap on simple parameters\n",
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98c383b5",
+   "id": "e9907166",
    "metadata": {},
    "source": [
     "# Exercise: Rewrite `calc` to use parameters\n",
@@ -467,7 +467,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "d4d8c235",
+   "id": "955d215b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -496,7 +496,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "a3da0b50",
+   "id": "1fb75034",
    "metadata": {},
    "outputs": [
     {
@@ -517,7 +517,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "6c73d400",
+   "id": "5fd03a5e",
    "metadata": {},
    "outputs": [
     {
@@ -541,7 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "b8de451a",
+   "id": "58bbe9e9",
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bee35ee6",
+   "id": "59e5db7a",
    "metadata": {},
    "source": [
     "# Next up:\n",
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37adbee4",
+   "id": "8b21641d",
    "metadata": {},
    "source": [
     "# Return values\n",
@@ -602,7 +602,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "fd88d62a",
+   "id": "6c3d9dc5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -614,7 +614,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "8e07ce08",
+   "id": "db168638",
    "metadata": {},
    "outputs": [
     {
@@ -640,7 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "ae3786ab",
+   "id": "8502732e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -671,7 +671,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "88c22b14",
+   "id": "5fb08263",
    "metadata": {},
    "outputs": [
     {
@@ -689,7 +689,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50090dd7",
+   "id": "9f24bd58",
    "metadata": {},
    "source": [
     "# What might we return from a function?\n",
@@ -702,7 +702,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d96235d",
+   "id": "ffde3003",
    "metadata": {},
    "source": [
     "# Exercise: Biggest and smallest\n",
@@ -722,7 +722,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "174b06a4",
+   "id": "d39cd7f5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -744,7 +744,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "0bcc6196",
+   "id": "7fa39d58",
    "metadata": {},
    "outputs": [
     {
@@ -765,7 +765,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "dddb815f",
+   "id": "5a33db46",
    "metadata": {},
    "outputs": [
     {
@@ -787,7 +787,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "9dfec6aa",
+   "id": "53b4b50c",
    "metadata": {},
    "outputs": [
     {
@@ -808,7 +808,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "bf70b92b",
+   "id": "f934940d",
    "metadata": {},
    "outputs": [
     {
@@ -829,7 +829,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "beec785d",
+   "id": "a179ab65",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -845,7 +845,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc792e16",
+   "id": "471befa7",
    "metadata": {},
    "source": [
     "# Types of arguments in Python\n",
@@ -861,7 +861,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "3265c582",
+   "id": "f62b30b8",
    "metadata": {},
    "outputs": [
     {
@@ -886,7 +886,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "5862a0b3",
+   "id": "69b3fc57",
    "metadata": {},
    "outputs": [
     {
@@ -907,7 +907,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "11985060",
+   "id": "9635727c",
    "metadata": {},
    "outputs": [
     {
@@ -925,7 +925,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "512d14f2",
+   "id": "c52d779e",
    "metadata": {},
    "source": [
     "# Exercise: Name and age\n",
@@ -938,7 +938,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "d4e24c67",
+   "id": "39eabad7",
    "metadata": {},
    "outputs": [
     {
@@ -967,7 +967,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "46194ac8",
+   "id": "b0812088",
    "metadata": {},
    "outputs": [
     {
@@ -988,7 +988,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "77d9bf79",
+   "id": "2dea2d1e",
    "metadata": {},
    "outputs": [
     {
@@ -1009,7 +1009,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "9792f512",
+   "id": "2e27762e",
    "metadata": {},
    "outputs": [
     {
@@ -1029,7 +1029,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d76fc80e",
+   "id": "d66ccf8a",
    "metadata": {},
    "source": [
     "# Optional arguments\n",
@@ -1045,7 +1045,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "90d7e0ea",
+   "id": "7d96e2f8",
    "metadata": {},
    "outputs": [
     {
@@ -1070,7 +1070,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "671b81ac",
+   "id": "5513b92c",
    "metadata": {},
    "outputs": [
     {
@@ -1096,7 +1096,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "5e40c8ea",
+   "id": "a323f824",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1111,7 +1111,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "3e452d5f",
+   "id": "cc3655a4",
    "metadata": {},
    "outputs": [
     {
@@ -1132,7 +1132,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "a259c099",
+   "id": "fbd57c2e",
    "metadata": {},
    "outputs": [
     {
@@ -1153,7 +1153,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "fe945e96",
+   "id": "bd5ba0de",
    "metadata": {},
    "outputs": [
     {
@@ -1173,7 +1173,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c349f88",
+   "id": "11d9dd37",
    "metadata": {},
    "source": [
     "# Next up:\n",
@@ -1185,7 +1185,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0044fdef",
+   "id": "ebb83c38",
    "metadata": {},
    "source": [
     "# f-strings (\"format strings\" or \"fancy strings\")\n",
@@ -1221,7 +1221,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "cdf7a575",
+   "id": "4ea3d9c8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1232,7 +1232,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "67b61ff2",
+   "id": "83f252c4",
    "metadata": {},
    "outputs": [
     {
@@ -1253,7 +1253,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "adc33b35",
+   "id": "1d445ba0",
    "metadata": {},
    "outputs": [
     {
@@ -1277,7 +1277,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "4e7516d0",
+   "id": "0b3b2190",
    "metadata": {},
    "outputs": [
     {
@@ -1300,7 +1300,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9daa4011",
+   "id": "bb5a24a3",
    "metadata": {},
    "source": [
     "# Argument typing"
@@ -1309,7 +1309,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "bba71266",
+   "id": "0e85eaca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1321,7 +1321,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "0b346991",
+   "id": "d27cbd37",
    "metadata": {},
    "outputs": [
     {
@@ -1342,7 +1342,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "bbdfa1db",
+   "id": "d9886192",
    "metadata": {},
    "outputs": [
     {
@@ -1364,7 +1364,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "6ad748b3",
+   "id": "7a796eee",
    "metadata": {},
    "outputs": [
     {
@@ -1386,7 +1386,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "9bf8a2e2",
+   "id": "25929e07",
    "metadata": {},
    "outputs": [
     {
@@ -1408,7 +1408,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "a9849fbf",
+   "id": "379ed3da",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1439,7 +1439,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "1af3f11d",
+   "id": "0858a285",
    "metadata": {},
    "outputs": [
     {
@@ -1460,7 +1460,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "59bd1d88",
+   "id": "a3d830bb",
    "metadata": {},
    "outputs": [
     {
@@ -1485,7 +1485,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6963a18",
+   "id": "e3739045",
    "metadata": {},
    "source": [
     "# Exercise: Vowel count\n",
@@ -1500,7 +1500,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "34390867",
+   "id": "ea991b34",
    "metadata": {},
    "outputs": [
     {
@@ -1538,7 +1538,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4cd503c3",
+   "id": "60ae5c19",
    "metadata": {},
    "source": [
     "# Complex return values\n",
@@ -1557,7 +1557,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df314759",
+   "id": "c19a52a3",
    "metadata": {},
    "source": [
     "# Exercise: Filter vowels\n",
@@ -1575,7 +1575,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "8b9dd71e",
+   "id": "93083e40",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1595,7 +1595,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "c3eb1547",
+   "id": "a8372d21",
    "metadata": {},
    "outputs": [
     {
@@ -1629,7 +1629,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "1008a6e0",
+   "id": "01e97717",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1650,7 +1650,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "917fa32e",
+   "id": "d41ff7c5",
    "metadata": {},
    "outputs": [
     {
@@ -1670,7 +1670,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c038ace2",
+   "id": "1d104dda",
    "metadata": {},
    "source": [
     "# Tuple unpacking\n",
@@ -1688,7 +1688,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "2ba1a267",
+   "id": "e3232b36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1701,7 +1701,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "a03dbc98",
+   "id": "fbf59643",
    "metadata": {},
    "outputs": [
     {
@@ -1722,7 +1722,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "d0e54ffd",
+   "id": "5eb0b00d",
    "metadata": {},
    "outputs": [
     {
@@ -1743,7 +1743,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "6f2b4d63",
+   "id": "109ebd57",
    "metadata": {},
    "outputs": [
     {
@@ -1764,7 +1764,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "5da3305f",
+   "id": "09dba7ad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1774,7 +1774,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "d00169af",
+   "id": "864cf841",
    "metadata": {},
    "outputs": [
     {
@@ -1795,7 +1795,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "bd002294",
+   "id": "8150f878",
    "metadata": {},
    "outputs": [
     {
@@ -1815,7 +1815,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d223e4ec",
+   "id": "b1d4b856",
    "metadata": {},
    "source": [
     "# Next up:\n",
@@ -1825,12 +1825,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0acb72ec",
+   "cell_type": "markdown",
+   "id": "7c033aa2",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Exercise: `filter_characters`\n",
+    "\n",
+    "Write a function, `filter_characters`, that works just like my implementation of `filter_vowels`. That is, "
+   ]
   }
  ],
  "metadata": {
