--- a/Python first steps, day 4 -- 2022-12Dec-12.ipynb
+++ b/Python first steps, day 4 -- 2022-12Dec-12.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c5217f68",
+   "id": "c5a5d859",
    "metadata": {},
    "source": [
     "# Agenda, day 4: Functions!\n",
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "acdda343",
+   "id": "0a307d70",
    "metadata": {},
    "source": [
     "# What are functions?\n",
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "029d70b0",
+   "id": "f7900573",
    "metadata": {},
    "source": [
     "# To define a new function:\n",
@@ -87,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d8dcf0bc",
+   "id": "a475ec22",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "66a70465",
+   "id": "4969e0c8",
    "metadata": {},
    "source": [
     "# What happens when I define a function?\n",
@@ -115,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "f6f0bfc9",
+   "id": "2a188ec0",
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "c8e985b8",
+   "id": "d19ad043",
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "856e58cf",
+   "id": "dbbf26a6",
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "4be1f642",
+   "id": "b977fbdc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "ad46771c",
+   "id": "be518a7f",
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "909ff9b3",
+   "id": "963a4b7e",
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "a35b6a7c",
+   "id": "a2c40661",
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31c7b2d2",
+   "id": "4b44f3b8",
    "metadata": {},
    "source": [
     "# Exercise: Calculator\n",
@@ -279,7 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "fbcfc54d",
+   "id": "c3877932",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "3fc23b89",
+   "id": "0c7d8eba",
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "a2a4dc4d",
+   "id": "85a3037a",
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b50f6409",
+   "id": "80741781",
    "metadata": {},
    "source": [
     "# Arguments and parameters\n",
@@ -367,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "9756b3b8",
+   "id": "809ef9ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +380,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "ea874964",
+   "id": "dcc18c5b",
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +401,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "2d8da5ed",
+   "id": "72e54bec",
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +422,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "3523f02b",
+   "id": "508e880e",
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eef94d52",
+   "id": "1f9f242f",
    "metadata": {},
    "source": [
     "# Recap on simple parameters\n",
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9907166",
+   "id": "9599c19f",
    "metadata": {},
    "source": [
     "# Exercise: Rewrite `calc` to use parameters\n",
@@ -467,7 +467,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "955d215b",
+   "id": "cd416493",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -496,7 +496,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "1fb75034",
+   "id": "8346cccb",
    "metadata": {},
    "outputs": [
     {
@@ -517,7 +517,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "5fd03a5e",
+   "id": "9fdf5358",
    "metadata": {},
    "outputs": [
     {
@@ -541,7 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "58bbe9e9",
+   "id": "fcc36e0d",
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "59e5db7a",
+   "id": "61b52bd5",
    "metadata": {},
    "source": [
     "# Next up:\n",
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b21641d",
+   "id": "56d73dc1",
    "metadata": {},
    "source": [
     "# Return values\n",
@@ -602,7 +602,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "6c3d9dc5",
+   "id": "f9770f7b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -614,7 +614,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "db168638",
+   "id": "3f048eca",
    "metadata": {},
    "outputs": [
     {
@@ -640,7 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "8502732e",
+   "id": "4961c68a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -671,7 +671,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "5fb08263",
+   "id": "9fbccd48",
    "metadata": {},
    "outputs": [
     {
@@ -689,7 +689,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f24bd58",
+   "id": "d0759a9f",
    "metadata": {},
    "source": [
     "# What might we return from a function?\n",
@@ -702,7 +702,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ffde3003",
+   "id": "f229d22e",
    "metadata": {},
    "source": [
     "# Exercise: Biggest and smallest\n",
@@ -722,7 +722,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "d39cd7f5",
+   "id": "ce42f4cd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -744,7 +744,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "7fa39d58",
+   "id": "7e4eb5b2",
    "metadata": {},
    "outputs": [
     {
@@ -765,7 +765,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "5a33db46",
+   "id": "b4558b6e",
    "metadata": {},
    "outputs": [
     {
@@ -787,7 +787,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "53b4b50c",
+   "id": "f765bad1",
    "metadata": {},
    "outputs": [
     {
@@ -808,7 +808,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "f934940d",
+   "id": "68cfeade",
    "metadata": {},
    "outputs": [
     {
@@ -829,7 +829,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "a179ab65",
+   "id": "14ac7b6f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -845,7 +845,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "471befa7",
+   "id": "651a93ea",
    "metadata": {},
    "source": [
     "# Types of arguments in Python\n",
@@ -861,7 +861,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "f62b30b8",
+   "id": "7d7b0ca1",
    "metadata": {},
    "outputs": [
     {
@@ -886,7 +886,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "69b3fc57",
+   "id": "90025040",
    "metadata": {},
    "outputs": [
     {
@@ -907,7 +907,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "9635727c",
+   "id": "741720b9",
    "metadata": {},
    "outputs": [
     {
@@ -925,7 +925,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c52d779e",
+   "id": "efdef6ba",
    "metadata": {},
    "source": [
     "# Exercise: Name and age\n",
@@ -938,7 +938,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "39eabad7",
+   "id": "4905fc8e",
    "metadata": {},
    "outputs": [
     {
@@ -967,7 +967,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "b0812088",
+   "id": "e4527839",
    "metadata": {},
    "outputs": [
     {
@@ -988,7 +988,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "2dea2d1e",
+   "id": "57954a17",
    "metadata": {},
    "outputs": [
     {
@@ -1009,7 +1009,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "2e27762e",
+   "id": "d701ce68",
    "metadata": {},
    "outputs": [
     {
@@ -1029,7 +1029,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d66ccf8a",
+   "id": "246aace1",
    "metadata": {},
    "source": [
     "# Optional arguments\n",
@@ -1045,7 +1045,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "7d96e2f8",
+   "id": "9690fba6",
    "metadata": {},
    "outputs": [
     {
@@ -1070,7 +1070,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "5513b92c",
+   "id": "0077cad6",
    "metadata": {},
    "outputs": [
     {
@@ -1096,7 +1096,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "a323f824",
+   "id": "0cfdba14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1111,7 +1111,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "cc3655a4",
+   "id": "51c33527",
    "metadata": {},
    "outputs": [
     {
@@ -1132,7 +1132,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "fbd57c2e",
+   "id": "d0e37a72",
    "metadata": {},
    "outputs": [
     {
@@ -1153,7 +1153,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "bd5ba0de",
+   "id": "3d83b098",
    "metadata": {},
    "outputs": [
     {
@@ -1173,7 +1173,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11d9dd37",
+   "id": "172fdaf3",
    "metadata": {},
    "source": [
     "# Next up:\n",
@@ -1185,7 +1185,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ebb83c38",
+   "id": "1767e8b7",
    "metadata": {},
    "source": [
     "# f-strings (\"format strings\" or \"fancy strings\")\n",
@@ -1221,7 +1221,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "4ea3d9c8",
+   "id": "a468700a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1232,7 +1232,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "83f252c4",
+   "id": "3f2a4d17",
    "metadata": {},
    "outputs": [
     {
@@ -1253,7 +1253,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "1d445ba0",
+   "id": "65a934e1",
    "metadata": {},
    "outputs": [
     {
@@ -1277,7 +1277,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "0b3b2190",
+   "id": "d8c859f5",
    "metadata": {},
    "outputs": [
     {
@@ -1300,7 +1300,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb5a24a3",
+   "id": "aafd52ee",
    "metadata": {},
    "source": [
     "# Argument typing"
@@ -1309,7 +1309,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "0e85eaca",
+   "id": "70d539fb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1321,7 +1321,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "d27cbd37",
+   "id": "1f86467c",
    "metadata": {},
    "outputs": [
     {
@@ -1342,7 +1342,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "d9886192",
+   "id": "ba064993",
    "metadata": {},
    "outputs": [
     {
@@ -1364,7 +1364,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "7a796eee",
+   "id": "d1357a74",
    "metadata": {},
    "outputs": [
     {
@@ -1386,7 +1386,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "25929e07",
+   "id": "14b8c6f8",
    "metadata": {},
    "outputs": [
     {
@@ -1408,7 +1408,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "379ed3da",
+   "id": "17608a7d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1439,7 +1439,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "0858a285",
+   "id": "6136c509",
    "metadata": {},
    "outputs": [
     {
@@ -1460,7 +1460,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "a3d830bb",
+   "id": "810d1be2",
    "metadata": {},
    "outputs": [
     {
@@ -1485,7 +1485,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e3739045",
+   "id": "e354c509",
    "metadata": {},
    "source": [
     "# Exercise: Vowel count\n",
@@ -1500,7 +1500,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "ea991b34",
+   "id": "c8bb4185",
    "metadata": {},
    "outputs": [
     {
@@ -1538,7 +1538,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60ae5c19",
+   "id": "b92cb75e",
    "metadata": {},
    "source": [
     "# Complex return values\n",
@@ -1557,7 +1557,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c19a52a3",
+   "id": "fb2e33d8",
    "metadata": {},
    "source": [
     "# Exercise: Filter vowels\n",
@@ -1575,7 +1575,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "93083e40",
+   "id": "3133f5d9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1595,7 +1595,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "a8372d21",
+   "id": "dc09ee15",
    "metadata": {},
    "outputs": [
     {
@@ -1629,7 +1629,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "01e97717",
+   "id": "79a4b683",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1650,7 +1650,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "d41ff7c5",
+   "id": "5f4e1103",
    "metadata": {},
    "outputs": [
     {
@@ -1670,7 +1670,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d104dda",
+   "id": "d67836ec",
    "metadata": {},
    "source": [
     "# Tuple unpacking\n",
@@ -1688,7 +1688,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "e3232b36",
+   "id": "470c1462",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1701,7 +1701,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "fbf59643",
+   "id": "aa0e85b8",
    "metadata": {},
    "outputs": [
     {
@@ -1722,7 +1722,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "5eb0b00d",
+   "id": "f7f3be19",
    "metadata": {},
    "outputs": [
     {
@@ -1743,7 +1743,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "109ebd57",
+   "id": "417840ee",
    "metadata": {},
    "outputs": [
     {
@@ -1764,7 +1764,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "09dba7ad",
+   "id": "9dbe47d4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1774,7 +1774,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "864cf841",
+   "id": "2af6988d",
    "metadata": {},
    "outputs": [
     {
@@ -1795,7 +1795,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "8150f878",
+   "id": "27baad6c",
    "metadata": {},
    "outputs": [
     {
@@ -1815,7 +1815,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b1d4b856",
+   "id": "0a5cbbd8",
    "metadata": {},
    "source": [
     "# Next up:\n",
@@ -1826,12 +1826,23 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c033aa2",
+   "id": "673ca7e9",
    "metadata": {},
    "source": [
     "# Exercise: `filter_characters`\n",
     "\n",
-    "Write a function, `filter_characters`, that works just like my implementation of `filter_vowels`. That is, "
+    "Write a function, `filter_characters`, that works just like my implementation of `filter_vowels`. That is, you pass a string, and you get back (a) the string without vowels and (b) a dict whose keys are vowels and whose values are the number of each vowel that was removed.\n",
+    "\n",
+    "However, this function will differ in that it'll allow the function's caller to determine which characters are filtered out. The default will be vowels (a, e, i, o, and u), but the caller can change that by passing an string argument, `filter_chars`.  \n",
+    "\n",
+    "The elements of `filter_chars` (a string) will be the keys in the filtered dictionary we get back.\n",
+    "\n",
+    "I should be able to say:\n",
+    "\n",
+    "```python\n",
+    "filtered_string, removed_characters = filter_characters('hello to all of you!')  # here, we'll remove vowels\n",
+    "\n",
+    "```"
    ]
   }
  ],
